# sheetseeker

./: .gitignore  Pipfile  playground.ipynb  requirements.txt
src/: Dockerfile  Makefile  README.ipynb  README.md  config.py  constants.py  datatypes.py  docker-compose.yml  highlight.py  highlight_data.py  highlighter.py  llm.py  main.py  parse_data.py  parse_sheet.py  project.org  pyproject.toml  requirements.txt  solution.py  test_outfile.xlsx  utils.py
src/sheetseeker/: cli.py
src/sheetseeker/api/: __init__.py  highlight.py
src/sheetseeker/evals/: __init__.py  highlight.py
src/sheetseeker/llm/: __init__.py  openai.py
src/sheetseeker/llm/templates/: data_contents_csv_01.txt  data_contents_pipe_delimited_01.txt  data_contents_worksheet_input_01.txt  highlight_cells_in_sheet.txt  highlight_cells_in_sheet_01.txt  highlight_cells_in_sheet_02.txt  highlight_cells_in_sheet_03.txt  highlight_cells_in_sheet_04.txt  highlight_cells_in_sheet_05.txt  highlight_cells_in_sheet_06.txt  highlight_cells_in_sheet_07.txt  highlight_cells_in_sheet_08.txt  highlight_cells_multistep_01.txt  identify_cells_in_sheet_01.txt  row_col_based_01.txt  two_shot_first_step_user_02.txt  two_shot_first_step_user_03.txt  two_shot_first_sys_prompt_01.txt  two_shot_first_sys_prompt_02.txt  two_shot_second_prompt_loose_02.txt  two_shot_second_prompt_loose_03.txt  two_shot_second_prompt_strict_01.txt  two_shot_second_prompt_strict_02.txt  two_shot_second_prompt_strict_03.txt  two_shot_second_prompt_strict_04.txt
src/sheetseeker/spreadsheet/: spreadsheet.py
tests/: cli.py  local.py
(+18 files in other folders)
