[tool.poetry]
name = "sheetseeker"
version = "0.1.0"
description = ""
authors = ["Zachery Chin <zchin@sproutpost.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
openpyxl = "^3.1.2"
jinja2 = "^3.1.3"

[tool.poetry.scripts]
sheetseeker = "sheetseeker.cli:main"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
